configPod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-config-pod
spec:
  containers:
  - name: busybox
    image: busybox:latest
    command: [ "sleep", "infinity" ]
    volumeMounts:
        - name: properties
          mountPath: "/properties"
          readOnly: true
  volumes:
  - name: properties
    configMap:
      name: test-config
      items:
      - key: "users.properties"
        path: "users.properties"
  restartPolicy: Never
