curlDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-curl
  labels:
    app: curl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curl
  template:
    metadata:
      labels:
        app: curl
    spec:
      containers:
      - name: curl
        image: curlimages/curl
        command: [ "sleep", "infinity" ]
