initContainer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: init-container
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
    volumeMounts:
    - name: tmp
      mountPath: /usr/share/nginx/html
  volumes:
  - name: tmp
    emptyDir: {}
