multiContainer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-container
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
    volumeMounts:
    - name: tmp
      mountPath: /usr/share/nginx/html
  - name: busybox
    image: busybox
    command: ["/bin/sh"]
    args: ["-c", "while true;do echo '<html><h1>Hello DLI!</h1><html>' >> /tmp/index.html; sleep 3;done"]
    volumeMounts:
    - name: tmp
      mountPath: "/tmp"
  volumes:
  - name: tmp
    emptyDir: {}
