nameDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: name-deployment-nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: name_nginx
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
