nodeSelector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: selector-test
spec:
  containers:
  - name: busybox
    image: busybox:latest
    command: [ "sleep", "infinity" ]
    imagePullPolicy: IfNotPresent
  nodeSelector:
    myNode: coolNode
