podLifecycle.yaml
apiVersion: v1
kind: Pod
metadata:
  name: lifecycle-pod
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
    lifecycle:
        postStart:
          exec:
            command: ["/bin/sh", "-c", "echo 'Hello DLI!' > /started"]
        preStop:
          exec:
            command: ["/bin/sh", "-c", "echo 'Goodbye DLI' >> /stopped; sleep 30"]
