podResources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-first-pod
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    resources:
      requests:
        memory: "512Mi"
        cpu: "500m"
      limits:
        memory: "1G"
        cpu: "1"
    ports:
    - containerPort: 80
