rolloutDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rollout-nginx
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: red_nginx
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "sleep 7"]
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 7"]
