storageDeploymentNginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage-deployment-nginx
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
        - name: my-storage
          persistentVolumeClaim:
            claimName: my-claim
      containers:
        - name: task-pv-container
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: "/usr/share/nginx/html"
              name: my-storage
