ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: first-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: dli-kube.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: name-deployment-nginx
                port:
                  number: 8080
